Simple/infra/k8s/posts-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: domambia/simple-backend:0.0.2
