Simple/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector: # which pod the deployment to manage
    matchLabels:
      app: posts
  template: # creating a pod
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: domambia/simple-backend #domambia/simple-backend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts # label
  # type: ClusterIp # not provides its the default
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
